* customizer CTA widget empty bar hide * customizer widget settings z-index fixed

--- a/src/sass/admin.scss
+++ b/src/sass/admin.scss
@@ -210,3 +210,13 @@ div [id *="ninja_forms_metabox"] .item-edit.metabox-item-edit {
 #wp-link-wrap {
     z-index: 500555 !important; /* originally 100105, but z-index of .wp-full-overlay is 500000 */
 }
+
+.widget-inside {
+    z-index: 2;
+}
+
+li[id^="customize-control-widget_knd_cta-"] {
+    .widget-inside {
+        visibility:hidden;
+    }
+}
